[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "aloy"
version = "0.1.1"
description = "A Python package containing algorithms and data structures for AI, ML, and Robotics."
readme = "README.md"
authors = [
    {name = "Ollie Kampo", email = "olliekampo@gmail.com"}
]
maintainers = [
    {name = "Ollie Kampo", email = "olliekampo@gmail.com"}
]
keywords = ["aloy", "algorithms", "data structures", "ai", "ml", "robotics"]
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
dependencies = [
    "numpy>=1.21.2",
    # "pandas>=1.3.3",
    # "scipy>=1.7.1",
    # "scikit-learn>=1.0",
    # "matplotlib>=3.4.3",
    # "seaborn>=0.11.2",
    # "torch>=1.9.1",
    # "gym>=0.19.0"
]


[tool.maturin]
python-source = "python"
module-name = "aloy.rost"
features = ["pyo3/extension-module"]
