[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "aloy"
version = "0.2.0"
description = "A Python package containing algorithms and data structures for AI, ML, and Robotics."
readme = "README.md"
authors = [
    {name = "Ollie Kampo", email = "olliekampo@gmail.com"}
]
maintainers = [
    {name = "Ollie Kampo", email = "olliekampo@gmail.com"}
]
keywords = ["aloy", "algorithms", "data structures", "ai", "ml", "robotics"]
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
dependencies = [
    "numpy==1.24.3",
    "pyside6==6.5.2",
    "pyside6-addons==6.5.2",
    "pyside6-essentials==6.5.2",
    "scikit-learn==1.2.2",
    "scipy==1.10.1",
    "networkx==3.1",
    "matplotlib==3.7.1",
    "networkx==3.1",
    "numba==0.57.0",
    "pandas==1.5.3",
    "psutil==5.9.0",
    "pyfiglet==0.8.post1",
    "scikit_learn==1.2.2",
    "tqdm==4.65.0",
    "typing_extensions==4.8.0",
    "torch==2.1.0",
    "gymnasium==0.28.1"
]


[tool.maturin]
python-source = "python"
module-name = "aloy.rost"
features = ["pyo3/extension-module"]
